Version 1.2.11
- Allow servers to enforce their UUID
- Allow the plugin to send player coordinates if desired. This can be used for things like online maps. 
- Let the API set the plugins auth key remotely.
- Automatically enable UUID lock when authenticated.
- Increase version to 1.2.11